# planning-system

./: .gitignore  .vercelignore  DESIGN_REDESIGN_TRACKER.md  PROOF_OF_WORK.md  README.md  RUN_INSTRUCTIONS.md  SUBAGENT_LEARNINGS.md  TEST_PLAN.md  TEST_RESULTS.md  index.html  orchestration_log.md  package-lock.json  package.json  playwright.config.ts  post_work_snapshot.md  pre_work_snapshot.md  reasoning_audit.md  should_work.md  tailwind.config.js  test-store.ts  test-store2.ts  test-store3.ts  tsconfig.tsbuildinfo  vercel.json  vite.config.ts  vitest.config.ts
_sealed_baseline/: pre_work_snapshot.md
api/_utils/: auth.ts
api/auth/: login.ts  logout.ts  verify.ts
docs/: ROLLBACK.md  adr-001-tech-stack.md  adr-002-data-storage.md  adr-003-state-management.md  adr-004-daily-limit-design.md  agent-api.md  button-glow-effect.md
docs/plans/: 2026-03-24-prios-ui-redesign-design.md  2026-03-24-prios-ui-redesign-implementation.md
docs/showcases/: button-exploration.md  color-palettes.md  layout-wireframe.md  login-mockups.md
fixes-project/: FIXES_SUMMARY.md  KNOWN_ISSUES.md  TEST_RESULTS.md  development_phases.md  orchestration_log.md
fixes-project/_sealed_baseline/: pre_work_snapshot.md  pre_work_snapshot_v8.md
public/: slider-demo.html
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: App.tsx  ColorSchemeSwitcher.tsx  CommandInput.tsx  DebugTest.tsx  ErrorBoundary.tsx  FluidBlobCanvas.tsx  HybridStep.tsx  LoginScreen.tsx  Notification.tsx  ProtectedApp.tsx  TaskEditModal.tsx  TaskInput.tsx  TaskItem.tsx  (+3 more)
(+91 files in other folders)
